--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -5,13 +5,13 @@
                 <div class="col">
                     <label class="item item-input">
                         <span class="input-label">Cliente</span>
-                        <input type="text" required readonly ng-model="filters.customerName" ng-focus="searchCustomer()">
+                        <input type="text" required ng-model="filters.customerName" ng-focus="searchCustomer()">
                     </label>
                 </div>
                 <div class="col">
                     <label class="item item-input">
                         <span class="input-label">Marca</span>
-                        <input type="text" required readonly ng-model="filters.objectTypeTrademarkName" ng-focus="searchObjectTypeTrademark()">
+                        <input type="text" required ng-model="filters.objectTypeTrademarkName" ng-focus="searchObjectTypeTrademark()">
                     </label>
                 </div>
             </div>
@@ -19,22 +19,27 @@
                 <div class="col">
                     <label class="item item-input">
                         <span class="input-label">Modelo</span>
-                        <input type="text" required readonly ng-model="filters.objectTypeModelName" ng-focus="searchObjectTypeModel()">
+                        <input type="text" required ng-model="filters.objectTypeModelName" ng-focus="searchObjectTypeModel()">
                     </label>
                 </div>
                 <div class="col">
                     <label class="item item-input">
                         <span class="input-label">Bateria / cargador</span>
-                        <input type="text" readonly ng-model="filters.objectTypeDescription" ng-focus="searchObjectType(recordsForm.$valid)">
+                        <input type="text" ng-model="filters.objectTypeDescription" ng-focus="searchObjectType(recordsForm.$valid)">
                     </label>
                 </div>
             </div>
-            <a class="button button-positive button-block" href="#/app/new/{{ filters.customerId }}/{{ filters.objectTypeType }}/{{ filters.objectTypeId }}" ng-disabled="runningProcess || !(filters.objectTypeId)">Nuevo mantenimiento</a>
+
+            <div class="row responsive-sm">
+                <div class="col">
+            <a class="button button-positive button-block" href="#/app/new/{{ filters.customerId}}/{{ filters.objectTypeType}}/{{ filters.objectTypeId}}" ng-disabled="runningProcess || !(filters.objectTypeId)">Nuevo mantenimiento</a>
+                </div>
+            </div>
         </form>
         <div class="list">
-            <a class="item" ng-repeat="r in history" href="#/app/details/{{ r.Id }}">
+            <a class="item" ng-repeat="r in history" href="#/app/details/{{ r.Id}}">
                 {{ r.Date | date : 'dd/MM/yyyy' }} -> 
-                {{ r.Type.indexOf('Maintenance') >= 0 ? 'Mantenimiento ' : 'Ensamble ' }}
+                {{ r.Type.indexOf('Maintenance') >= 0 ? 'Mantenimiento ' : 'Ensamble '}}
                 {{ r.Preventive === true ? 'preventivo ' : '' }}
                 {{ r.Corrective === true ? 'correctivo ' : '' }}
             </a>
