--- a/www/templates/searcherPopup.html
+++ b/www/templates/searcherPopup.html
@@ -7,7 +7,7 @@
     </ion-header-bar>
     <ion-content>
         <form>
-            <div class="list">
+            <div class="list list-inset">
                 <label class="item item-input">
                     <i class="icon ion-search placeholder-icon"></i>
                     <input type="text" ng-model="searcher.search" ng-model-options="{debounce: 250}" ng-change="searcher.filter()">
