--- a/www/templates/new.html
+++ b/www/templates/new.html
@@ -14,11 +14,11 @@
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Cliente</span>
-                            <input type="text" required ng-readonly="(readOnlyLinks || maintenance.id)" ng-model="maintenance.customerName" ng-focus="searchCustomer()">
+                            <input type="text" required ng-readonly="(readOnlyLinks || maintenance.id)" ng-model="maintenance.customerName" ng-focus="searchCustomer($event)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Sucursal</span>
-                            <input type="text" ng-readonly="(readOnlyMode || !(maintenance.customerId))" ng-model="maintenance.branchCustomerName" ng-focus="searchBranchCustomer()">
+                            <input type="text" ng-readonly="(readOnlyMode || !(maintenance.customerId))" ng-model="maintenance.branchCustomerName" ng-focus="searchBranchCustomer($event)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Realizado por</span>
@@ -45,15 +45,15 @@
                     <div class="list list-inset">
                         <label class="item item-input">
                             <span class="input-label">Marca</span>
-                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="battery.trademarkName" ng-focus="searchObjectTypeTrademark(true)">
+                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="battery.trademarkName" ng-focus="searchObjectTypeTrademark($event, true)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Modelo</span>
-                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="battery.modelName" ng-focus="searchObjectTypeModel(true)">
+                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="battery.modelName" ng-focus="searchObjectTypeModel($event, true)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Serial</span>
-                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="battery.serial" ng-focus="searchObjectType(true)">
+                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="battery.serial" ng-focus="searchObjectType($event, true)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Nro Interno</span>
@@ -128,15 +128,15 @@
                     <div class="list list-inset">
                         <label class="item item-input">
                             <span class="input-label">Marca</span>
-                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="charger.trademarkName" ng-focus="searchObjectTypeTrademark(false)">
+                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="charger.trademarkName" ng-focus="searchObjectTypeTrademark($event, false)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Modelo</span>
-                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="charger.modelName" ng-focus="searchObjectTypeModel(false)">
+                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="charger.modelName" ng-focus="searchObjectTypeModel($event, false)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Serial</span>
-                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="charger.serial" ng-focus="searchObjectType(false)">
+                            <input type="text" required ng-readonly="readOnlyLinks" ng-model="charger.serial" ng-focus="searchObjectType($event, false)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Nro Interno</span>
@@ -161,15 +161,15 @@
                     <div class="list list-inset">
                         <label class="item item-input">
                             <span class="input-label">Marca</span>
-                            <input type="text" ng-readonly="readOnlyMode" ng-model="machine.trademarkName" ng-focus="searchMachineTrademark()">
+                            <input type="text" ng-readonly="readOnlyMode" ng-model="machine.trademarkName" ng-focus="searchMachineTrademark($event)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Modelo</span>
-                            <input type="text" ng-required="(machine.trademarkName)" ng-readonly="readOnlyMode" ng-model="machine.modelName" ng-focus="searchMachineModel()">
+                            <input type="text" ng-required="(machine.trademarkName)" ng-readonly="readOnlyMode" ng-model="machine.modelName" ng-focus="searchMachineModel($event)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Serial</span>
-                            <input type="text" ng-required="(machine.trademarkName)" ng-readonly="readOnlyLinks" ng-model="machine.serial" ng-focus="searchMachine()">
+                            <input type="text" ng-required="(machine.trademarkName)" ng-readonly="readOnlyLinks" ng-model="machine.serial" ng-focus="searchMachine($event)">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Nro Interno</span>
@@ -200,7 +200,7 @@
                 <form name="workToBeDoneForm" ng-class="{'show-errors': !readOnlyMode}">
                     <div class="list list-inset">
                         <label class="item item-input">
-                            <textarea rows="20" placeholder="Por favor digite aquí la labor a realizar ..." required ng-readonly="readOnlyMode" ng-model="maintenance.workToBeDone" ng-model-options="{updateOn: 'blur'}"></textarea>
+                            <textarea rows="20" placeholder="Por favor digite aquí la labor a realizar ..." required ng-readonly="readOnlyMode" ng-model="maintenance.workToBeDone" ng-model-options="{debounce: 250}"></textarea>
                         </label>
                     </div>
                 </form>
@@ -266,7 +266,7 @@
                             <div class="row">
                                 <div class="col">
                                     <label class="item item-input">
-                                        <input type="text" placeholder="Artículo" ng-readonly="readOnlyMode" ng-model="ao.articleName" ng-focus="searchArticle(ao)">
+                                        <input type="text" placeholder="Artículo" ng-readonly="readOnlyMode" ng-model="ao.articleName" ng-focus="searchArticle($event, ao)">
                                     </label>
                                 </div>
                                 <div class="col col-25">
