--- a/www/templates/new.html
+++ b/www/templates/new.html
@@ -12,9 +12,9 @@
                             <span class="input-label">Fecha</span>
                             <input type="date" required ng-readonly="readOnlyMode" ng-model="maintenance.date" ng-model-options="{updateOn: 'blur'}">
                         </label>
-                        <label class="item item-input">
+                        <label class="item item-input" ng-click="searchCustomer($event)">
                             <span class="input-label">Cliente</span>
-                            <input type="text" required ng-readonly="(readOnlyLinks || maintenance.id)" ng-model="maintenance.customerName" ng-focus="searchCustomer($event)">
+                            <input type="text" required ng-readonly="(readOnlyLinks || maintenance.id)" ng-model="maintenance.customerName">
                         </label>
                         <label class="item item-input">
                             <span class="input-label">Sucursal</span>
